--- a/main.css
+++ b/main.css
@@ -12,8 +12,8 @@ body{
 }
 
 ::selection{
-  color: white;
-  background-color: rgb(235, 73, 73);
+  color: rgb(235, 73, 73);
+  background-color: rgb(80, 0, 0);
 }
 .main{
     display: flex;
