--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -7,8 +7,6 @@
     background-size: cover;
     background-repeat: no-repeat;
     padding-bottom: 10em;
-
-
 }
 
 
@@ -25,13 +23,14 @@
     width: 40%;
     margin-right: 10%;
     gap: 1em;
-
 }
 
 .contactCim{
     font-size: 40px;
     color: white;
     text-transform: uppercase;
+    font-weight: 600;
+    text-shadow: 2px 8px 6px rgba(0,0,0,0.2), 0px -5px 35px rgba(255,255,255,0.3);
 }
 
 .urlap >.contactCim{
@@ -39,13 +38,18 @@
 }
 
 .adatok{
-    font-size: large;
+    font-size: xx-large;
     color: white;
+    display: flex;
+    flex-direction: column;
+    margin-top: 16.5%;
+    text-shadow: 2px 8px 6px rgba(0,0,0,0.2), 0px -5px 35px rgba(255,255,255,0.3);
 }
 
 .tajekoztato{
     font-size: large;
     color: white;
+    text-shadow: 2px 8px 6px rgba(0,0,0,0.2), 0px -5px 35px rgba(255,255,255,0.3);
 }
 
 input, #slider, #uzenet{
@@ -57,6 +61,18 @@ input, #slider, #uzenet{
     background-color: white;
     opacity: .80;
     border-radius: 10px;
+}
+
+.normal{
+    box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
+    border: 0px;
+    padding-left: 2%;
+}
+
+#uzenet{
+    box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.75);
+    padding-left: 2%;
+    padding-top: 1%;
 }
 
 /*Switch formázása*/
@@ -153,10 +169,16 @@ input, #slider, #uzenet{
     color: white;
     height: 50px;
     align-items: center;
+    column-gap: 2px;
+}
+
+.CsillagB{
+    font-size: 80%;
 }
 
 .ertekeles > p{
-    margin-right: 1em;
+    margin-top: 3%;
+    margin-right: 3%
 }
 
 .valaszto{
@@ -208,7 +230,26 @@ button:hover{
     }
     .main{
         width: 80%;
+        flex-direction: column;
     }
+
+    .adatok{
+        align-items: center;
+        row-gap: 20px;
+    }
+
+    .elerhetosegek{
+        width: 100%;
+        text-align: center;
+        padding-right: 0px;
+        margin-left: 0px;
+    }
+
+    .urlap{
+        margin-right: 0px;
+        width: 85%;
+    }
+
     .tajekoztato{
         font-size: 150%;
     }
