IK-35 cotact us reszponzivitás

--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -46,6 +46,7 @@
 .tajekoztato{
     font-size: large;
     color: white;
+    text-wrap: nowrap;
 }
 
 input, #slider, #uzenet{
@@ -180,8 +181,8 @@ input, #slider, #uzenet{
   
 
 @keyframes ertekelesAnim {
-    0%{box-shadow: white 3px 3px 3px;}
-    100%{box-shadow: rgba(255, 255, 255, 0) 3px 3px 3px;}
+    0%{text-shadow: white 3px 3px 3px;}
+    100%{text-shadow: rgba(255, 255, 255, 0) 3px 3px 3px;}
 
 }
 /*Értékelés formázásának vége*/
@@ -228,21 +229,61 @@ button:hover{
     }
   }*/
 
+@media screen and (min-height: 1500px){
+
+  footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+  }
+
+  .main{
+    padding-bottom: 40em;
+  }
+}
+
+
+
+@media screen and (max-width: 1410px){
+
+  .rendeltE{
+    flex-direction: column;
+  }
+
+  .valaszto{
+    width: 330px;
+    height: 2px;
+  }
+}
+
+@media screen and (max-width: 1080px){
+  .main{
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .urlap{margin-right: 0;
+  }
+
+  .elerhetosegek{
+    padding: 0;
+    margin: 0;
+    text-align: center;
+  }
+}
+
 
 @media screen and (max-width: 870px){
-    .urlap{
-        width: 100%;
-    }
-    .main{
-        width: 80%;
-    }
-    .tajekoztato{
-        font-size: 150%;
-    }
-    
-    #SendGomb{
-        width: 100%;
-        margin-top: 2%;
-        font-size: 200%;
-    }
+  .urlap{
+      width: 90%;
+  }
+  .tajekoztato{
+      font-size: 150%;
+  }
+  
+  #SendGomb{
+      width: 90%;
+      margin-top: 2%;
+      font-size: 200%;
+  }
 }
