--- a/home.css
+++ b/home.css
@@ -106,6 +106,8 @@ body {
 .category:hover{
   background-color: rgb(209, 209, 209);
   opacity: 0.5;
+
+  transition: all 0.5s ease-in-out;
 }
 .category img {
   width: 100%;
@@ -164,6 +166,13 @@ a{
       margin-left: auto;
     margin-right: auto;
   }
+  .shipping.visible{
+    align-items: center;
+  }
+  #transport{
+    align-items: center;
+    margin-left: 0;
+  }
 }
 /* Tablet nézet */
 @media (max-width: 1024px) {
@@ -211,8 +220,5 @@ a{
       flex-direction: column;
       text-align: center;
       gap: 15px;
-  }
-  .shipping img {
-      width: 80px;
   }
 }
