--- a/CSS/transactions.css
+++ b/CSS/transactions.css
@@ -1,13 +1,17 @@
-body {
-    background-color: #f5f5f5;
-    margin: 0;
-    padding: 0;
-}
-
 .right {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
+}
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+}
+
+.torzs {
+    flex: 1;
 }
 
 .right > * {
