IK-30 Blog aloldalán a ratelés csillagok széppé tevése

--- a/CSS/BlogAloldal.css
+++ b/CSS/BlogAloldal.css
@@ -47,6 +47,20 @@
     width: 10%;
     margin-left: 2%;
 }
+.BlogRateCsillagIMG:hover{
+    animation-name: CsillagHover;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes CsillagHover{
+    from{
+        width: 10%;
+    }
+    to{
+        width: 11%;
+    }
+}
 
 
 #uzenet{
