IK-30 Blog aloldalán a megosztás lehetőség megcsinálása

--- a/CSS/BlogAloldal.css
+++ b/CSS/BlogAloldal.css
@@ -81,6 +81,11 @@
     font-size: larger;
     color: darkgray;
 }
+#ShareUzi{
+    display: none;
+    font-size: larger;
+    color: darkgray;
+}
 
 #BlogShareDiv{
     display: flex;
