--- a/CSS/myaccount.css
+++ b/CSS/myaccount.css
@@ -187,58 +187,132 @@ img.edit-icon{
   width: 30px;
 } 
 
+.mobile-menu-btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  z-index: 100;
+}
+
+.mobile-menu-btn span {
+  display: block;
+  width: 30px;
+  height: 3px;
+  margin: 6px 0;
+  background-color: #333;
+  transition: 0.4s;
+  border-radius: 2px;
+}
+
+.mobile-menu-btn.active span:nth-child(1) {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.mobile-menu-btn.active span:nth-child(2) {
+  opacity: 0;
+}
+
+.mobile-menu-btn.active span:nth-child(3) {
+  transform: rotate(45deg) translate(-5px, -6px);
+}
+
+.mobile-menu-btn {
+  left: 20px;
+  top: 80px; 
+  background: none;
+  border: none;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  z-index: 1001; 
+}
+
+.mobile-menu-btn span {
+  display: block;
+  width: 30px;
+  height: 3px;
+  margin: 6px 0;
+  background-color: #333;
+  transition: 0.4s;
+  border-radius: 2px;
+}
+
+.mobile-menu-btn.active span:nth-child(1) {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.mobile-menu-btn.active span:nth-child(2) {
+  opacity: 0;
+}
+
+.mobile-menu-btn.active span:nth-child(3) {
+  transform: rotate(45deg) translate(-5px, -6px);
+}
+
+.menu-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Átlátszó fekete háttér */
+  z-index: 999;
+  display: none;
+}
+
+.menu-overlay.active {
+  display: block;
+}
+
 @media screen and (max-width: 870px) {
   .torzs {
-    flex-direction: column;
+    position: relative;
+  }
+  
+  .mobile-menu-btn {
+    display: block;
   }
   
   .left {
-    width: 100%;
-    display: none; 
-    margin-bottom: 30px;
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 80%;
+    max-width: 300px;
+    height: 100%;
+    background-color: white;
+    padding: 80px 20px 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    overflow-y: auto;
+    z-index: 1000;
   }
   
   .left.active {
-    display: block; 
+    display: block;
   }
   
   .right {
     width: 100%;
   }
   
+  body.menu-open {
+    overflow: hidden;
+  }
+}
+
+@media screen and (min-width: 871px) {
   .mobile-menu-btn {
-    display: block;
-    position: relative;
-    margin: 20px 0 20px 10%;
-    background: none;
-    border: none;
-    cursor: pointer;
-    width: 40px;
-    height: 40px;
-    z-index: 100;
+    display: none;
   }
   
-  .mobile-menu-btn span {
-    display: block;
-    width: 30px;
-    height: 3px;
-    margin: 6px 0;
-    background-color: #333;
-    transition: 0.4s;
-    border-radius: 2px;
+  .menu-overlay {
+    display: none !important;
   }
-  
-  .mobile-menu-btn.active span:nth-child(1) {
-    transform: rotate(-45deg) translate(-5px, 6px);
-  }
-  
-  .mobile-menu-btn.active span:nth-child(2) {
-    opacity: 0;
-  }
-  
-  .mobile-menu-btn.active span:nth-child(3) {
-    transform: rotate(45deg) translate(-5px, -6px);
-  }
+}
+
 
   h1 {
     font-size: 40px;
@@ -261,8 +335,4 @@ img.edit-icon{
   .account-info-row .input-wrapper {
     width: 100%;
   }
-}
 
-.mobile-menu-btn {
-  display: none;
-}
