--- a/CSS/myaccount.css
+++ b/CSS/myaccount.css
@@ -257,7 +257,7 @@ img.edit-icon{
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Átlátszó fekete háttér */
+  background-color: rgba(255, 255, 255, 0.9); 
   z-index: 999;
   display: none;
 }
@@ -267,6 +267,14 @@ img.edit-icon{
 }
 
 @media screen and (max-width: 870px) {
+  .accountdetails{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+  .accountdetails>h1{
+    margin-left: 0;
+  }
   .torzs {
     position: relative;
   }
@@ -281,13 +289,12 @@ img.edit-icon{
     top: 0;
     left: 0;
     width: 80%;
-    max-width: 300px;
     height: 100%;
-    background-color: white;
+    max-width: 300px;
     padding: 80px 20px 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    overflow-y: auto;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
     z-index: 1000;
+    margin-top: 23%;
   }
   
   .left.active {
@@ -336,3 +343,8 @@ img.edit-icon{
     width: 100%;
   }
 
+  @media screen and (max-width: 810px){
+    .left{
+      margin-top: 25%;
+    }
+  }
