--- a/CSS/BlogAloldal.css
+++ b/CSS/BlogAloldal.css
@@ -1,10 +1,11 @@
 .FoKep{
     width: 100%;
     height: 90%;
+    object-fit: cover;
 }
 
 .FoKepDiv{
-    height: 20%;
+    height: 80vh;
     background-color: rgb(0, 5, 46);
 }
 
@@ -116,6 +117,10 @@
     animation-name: HoverEffect2;
     animation-duration: 0.25s;
     animation-fill-mode: forwards;
+}
+
+footer{
+    margin-top: 20%;
 }
 
 @keyframes HoverEffect{
