--- a/CSS/myaccount.css
+++ b/CSS/myaccount.css
@@ -186,158 +186,118 @@ h3 {
 img.edit-icon{
   width: 30px;
 } 
-.hamburger-menu {
+
+.sidebar-hamburger {
   display: none;
-  flex-direction: column;
-  justify-content: space-between;
+  cursor: pointer;
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  z-index: 1000;
+}
+
+.hamburger-icon {
   width: 30px;
   height: 24px;
-  cursor: pointer;
-  margin-right: 20px;
-  z-index: 10;
+  left: 0;
   position: relative;
 }
 
-.hamburger-menu span {
+.hamburger-icon span {
   display: block;
-  width: 100%;
-  height: 3px;
-  background-color: #333;
-  border-radius: 3px;
-  transition: all 0.3s ease;
   position: absolute;
-}
-.hamburger-menu span:nth-child(1) {
-  top: 0;
+  height: 3px;
+  width: 100%;
+  background: #5e5e5e;
+  border-radius: 3px;
+  opacity: 1;
+  left: 0;
+  transform: rotate(0deg);
+  transition: .25s ease-in-out;
 }
 
-.hamburger-menu span:nth-child(2) {
+.hamburger-icon span:nth-child(1) {
+  top: 0px;
+}
+
+.hamburger-icon span:nth-child(2) {
   top: 10px;
 }
 
-.hamburger-menu span:nth-child(3) {
+.hamburger-icon span:nth-child(3) {
   top: 20px;
 }
-.hamburger-menu.active span:nth-child(1) {
+
+.sidebar-hamburger.active .hamburger-icon span:nth-child(1) {
   top: 10px;
-  transform: rotate(45deg);
+  transform: rotate(135deg);
 }
 
-.hamburger-menu.active span:nth-child(2) {
+.sidebar-hamburger.active .hamburger-icon span:nth-child(2) {
   opacity: 0;
-  transform: translateX(-20px);
+  left: -60px;
 }
 
-.hamburger-menu.active span:nth-child(3) {
+.sidebar-hamburger.active .hamburger-icon span:nth-child(3) {
   top: 10px;
-  transform: rotate(-45deg);
-}
-@media screen and (max-width: 1024px) {
-  h1 {
-      font-size: 40px;
-  }
-  
-  h3 {
-      font-size: 2em;
-  }
-  
+  transform: rotate(-135deg);
 }
 
-@media screen and (max-width: 768px) {
-  .hamburger-menu {
-      display: flex;
-  }
-  
-  .accountdetails {
-      align-items: center;
-  }
-  
+@media screen and (max-width: 865px) {
   .torzs {
-      position: relative;
-      flex-direction: column;
+    flex-direction: column;
   }
   
   .left {
-      position: fixed;
-      left: 0;
-      top: 10%;
-      width: 250px;
-      height: 100vh;
-      background-color: #f5f5f5;
-      padding: 80px 20px 20px;
-      z-index: 5;
-      box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-      transition: left 0.3s ease;
-      overflow-y: auto;
+    width: 50%;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    height: 100vh;
+    background-color: white;
+    z-index: 999;
+    padding-top: 60px;
+    box-shadow: 2px 0 10px rgba(0,0,0,0.1);
+    transition: left 0.3s ease;
   }
   
   .left.active {
-      left: 0;
+    left: 0;
+  }
+  
+  .sidebar-hamburger {
+    display: block;
   }
   
   .right {
-      width: 100%;
-      padding-right: 0;
+    width: 100%;
+    padding-right: 0;
+    margin-top: 50px;
+  }
+  
+  .accountdetails {
+    margin-left: 5%;
+    margin-right: 5%;
+    flex-direction: column;
+    align-items: center;
   }
   
   h1 {
-      font-size: 30px;
-      margin-left: 10px;
-  }
-  
-  #pfp {
-      width: 80px;
-  }
-  
-  .hamburger-menu.active span:nth-child(1) {
-      transform: translateY(9px) rotate(45deg);
-  }
-  
-  .hamburger-menu.active span:nth-child(2) {
-      opacity: 0;
-  }
-  
-  .hamburger-menu.active span:nth-child(3) {
-      transform: translateY(-9px) rotate(-45deg);
-  }
-  
-  .overlay {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      z-index: 4;
-  }
-  
-  .overlay.active {
-      display: block;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .accountdetails {
-      margin-left: 5%;
-      margin-right: 5%;
-  }
-  
-  .torzs {
-      margin-left: 5%;
-      margin-right: 5%;
+    font-size: 40px;
+    margin-left: 0;
+    text-align: center;
   }
   
   .account-info-row {
-      flex-direction: column;
-      align-items: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
   }
-  
   .account-info-row label {
-      margin-bottom: 10px;
+    width: 100%;
+    margin-bottom: 10px;
   }
   
-  h3 {
-      font-size: 1.5em;
+  .value {
+    width: 100%;
   }
 }
