--- a/CSS/myaccount.css
+++ b/CSS/myaccount.css
@@ -190,17 +190,17 @@ img.edit-icon{
 .sidebar-hamburger {
   display: none;
   cursor: pointer;
-  position: fixed;
-  top: 20px;
-  left: 20px;
+  position: absolute;
+  top: 210px;
+  left: 850px;
   z-index: 1000;
 }
 
 .hamburger-icon {
   width: 30px;
   height: 24px;
-  left: 0;
-  position: relative;
+  left: 10px;
+  position: fixed;
 }
 
 .hamburger-icon span {
@@ -268,13 +268,18 @@ img.edit-icon{
   .sidebar-hamburger {
     display: block;
   }
-  
+  .account-info-row .input-wrapper{
+    width: 100%;
+  }
   .right {
     width: 100%;
     padding-right: 0;
     margin-top: 50px;
   }
-  
+  .torzs{
+    margin-left: 5%;
+    margin-right: 5%;
+  }
   .accountdetails {
     margin-left: 5%;
     margin-right: 5%;
