--- a/CSS/myaccount.css
+++ b/CSS/myaccount.css
@@ -86,6 +86,7 @@ h1 {
 .value:active {
   background-color: rgb(88, 88, 88);
   outline: none;
+  width: 100%;
 }
 
 .value::before {
@@ -191,16 +192,24 @@ img.edit-icon{
   display: none;
   cursor: pointer;
   position: absolute;
-  top: 210px;
-  left: 850px;
-  z-index: 1000;
+  top: 104px;
+  z-index: 9;
+  right: 0;
+  background-color: #f7f7f7;;
+  width: 50px;
+  height: 50px;
+  padding: 1px;
+  border-bottom-right-radius: 25% ;
+  translate: 100%;
+  box-shadow: -5px 1px 20px -10px;
 }
 
 .hamburger-icon {
   width: 30px;
   height: 24px;
-  left: 10px;
-  position: fixed;
+  margin-top: 15px;
+  margin-left: 8.5px;
+  position: absolute;
 }
 
 .hamburger-icon span {
@@ -252,19 +261,19 @@ img.edit-icon{
     width: 50%;
     position: fixed;
     top: 0;
-    left: -100%;
+    left: 0;
+    translate: -100%;
     height: 100vh;
     background-color: white;
-    z-index: 999;
-    padding-top: 60px;
+    z-index: 8;
+    padding-top: 120px;
     box-shadow: 2px 0 10px rgba(0,0,0,0.1);
-    transition: left 0.3s ease;
+    transition: left 0.3s ease, all 0.3s;
   }
   
   .left.active {
-    left: 0;
+    translate: 0;
   }
-  
   .sidebar-hamburger {
     display: block;
   }
