--- a/CSS/accessibility.css
+++ b/CSS/accessibility.css
@@ -54,6 +54,7 @@ body {
    .right{
       text-align: center;
       margin-top: 25%;
+      margin-bottom: 20%;
    }
    @media screen and (max-width: 660px){
     body{
