IK-36 sorting style szépítés

--- a/main.css
+++ b/main.css
@@ -823,6 +823,11 @@ i{
     }
   }
 
+  .alatta{
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
   @media only screen and (max-width: 600px) {
     .row {
       gap: 15px; 
