--- a/main.css
+++ b/main.css
@@ -10,9 +10,17 @@ body{
     letter-spacing: 0.02em;
     font-family: 'Barlow', sans-serif;    
 }
-
 ::selection{
   background: rgb(74, 144, 226);
+}
+a:visited{
+  color: black;
+  text-decoration: none;
+
+}
+a:link{
+  color: black;
+  text-decoration: none;
 }
 .main{
     display: flex;
