--- a/CSS/BlogAloldal.css
+++ b/CSS/BlogAloldal.css
@@ -123,6 +123,40 @@ footer{
     margin-top: 20%;
 }
 
+
+.commentDiv{
+    margin-top: 12%;
+}
+
+.commentSection{
+    display: flex;
+    margin-top: 2%;
+    margin-left: 3%;
+    margin-right: 3%;
+    background-color: rgb(0, 5, 46);
+    padding: 2%;
+    color: white;
+    border-radius: 4px;
+    box-shadow: 0px 12px 23px -10px rgba(107,106,107,1);
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.commentIkon{
+    width: 10%;
+    padding: 0px;
+}
+.commentKicsiDiv{
+    width: 90%;
+    padding: 0px;
+    padding-left: 5%;
+}
+.commentSzoveg{
+    padding: 0px;
+}
+.commentKep{
+    width: 90%;
+    padding: 0px;
+}
+
 @keyframes HoverEffect{
     from{
         background-color: rgb(235, 73, 73);
