--- a/main.css
+++ b/main.css
@@ -386,7 +386,7 @@ h2::after {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: white;
+  color: white !important;
   font-variant: small-caps;
   font-weight: 600;
   border: solid;
