--- a/main.css
+++ b/main.css
@@ -537,6 +537,38 @@ h2::after {
   filter: none;
   transition: none;
 }
+
+
+  /*Popup ablak*/
+  .modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+.modal-content {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    position: relative;
+}
+.close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 20px;
+    cursor: pointer;
+}
+.modal img {
+    width: 300px;
+    height: auto;
+}
  
 /* asztal */
 @media only screen and (min-width: 1024px) {
