--- a/main.css
+++ b/main.css
@@ -543,13 +543,15 @@ h2::after {
   .modal {
     display: none;
     position: fixed;
-    top: 0;
+    top: 40%;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 300px;
     background: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
+    z-index: 99;
+    box-shadow: black 0px 0px 5px;
 }
 .modal-content {
     background: white;
@@ -557,6 +559,7 @@ h2::after {
     border-radius: 10px;
     text-align: center;
     position: relative;
+    height: 260px;
 }
 .close {
     position: absolute;
@@ -564,10 +567,18 @@ h2::after {
     right: 15px;
     font-size: 20px;
     cursor: pointer;
+    width: 25px;
+    color: wheat;
 }
 .modal img {
     width: 300px;
     height: auto;
+}
+
+#popUpMain{
+  display: none;
+  width: 100%;
+  height: max-content;
 }
  
 /* asztal */
