--- a/CSS/notifications.css
+++ b/CSS/notifications.css
@@ -26,6 +26,7 @@ body {
     font-weight: 700;
     font-size: 20px;
     color: #47484b;
+    
   }
   
   .title::after {
@@ -91,9 +92,7 @@ body {
     animation: ripple 0.6s ease-in-out forwards;
   }
   #commentList {
-    margin-top: 20px;
-    padding: 10px;
-    background-color: #f9f9f9;
+    margin-left: -2%;
     border-radius: 10px;
 }
 
@@ -130,7 +129,12 @@ body {
     margin: auto;
     border: 0;
   }
-  
+  i{  
+    font-size: 12px;
+  line-height: 16px;
+  font-weight: 600;
+  color: #5f6064;
+  }
   .comment-react span {
     height: 35px;
     display: flex;
@@ -233,7 +237,11 @@ body {
   
   .text-box .formatting {
     display: grid;
-    grid-template-columns: auto auto auto auto auto 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(30px, auto));
+    gap: 5px;
+    align-items: center;
+    padding-top: 5px;
+    border-top: 1px solid #f1f1f1;
   }
   
   .text-box .formatting button {
@@ -274,5 +282,11 @@ body {
     100% {
       transform: scale(1);
       opacity: 0;
+    }
+  }
+
+  @media screen and (max-width: 865px) {
+    .right{
+      margin-left: 0;
     }
   }
