--- a/main.css
+++ b/main.css
@@ -543,10 +543,10 @@ h2::after {
   .modal {
     display: none;
     position: fixed;
-    top: 40%;
+    top: 0;
     left: 0;
     width: 100%;
-    height: 300px;
+    height: 100%;
     background: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
@@ -568,7 +568,7 @@ h2::after {
     font-size: 20px;
     cursor: pointer;
     width: 25px;
-    color: wheat;
+    color: white;
 }
 .modal img {
     width: 300px;
@@ -578,7 +578,6 @@ h2::after {
 #popUpMain{
   display: none;
   width: 100%;
-  height: max-content;
 }
  
 /* asztal */
