Kész teljesen a notificationoldalon a reply, rossz tartalom szűrés.

--- a/CSS/notifications.css
+++ b/CSS/notifications.css
@@ -290,3 +290,8 @@ body {
       margin-left: 0;
     }
   }
+  @media screen and (max-width: 400px){
+    body{
+      min-height: 180vh;
+    }
+  }
