--- a/main.css
+++ b/main.css
@@ -556,10 +556,11 @@ h2::after {
 .modal-content {
     background: white;
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 0px 10px 10px 0px;
     text-align: center;
     position: relative;
     height: 260px;
+    width: 50%;
 }
 .close {
     position: absolute;
@@ -578,6 +579,19 @@ h2::after {
 #popUpMain{
   display: none;
   width: 100%;
+}
+
+.popUpLeiras{
+  align-items: center;
+  text-align: justify;
+  font-size: medium;
+  color: rgb(36, 36, 36);
+  width: 80%;
+  text-wrap: wrap;
+}
+
+.modal-img{
+  border-radius: 10px 0px 0px 10px;
 }
  
 /* asztal */
