--- a/CSS/BlogAloldal.css
+++ b/CSS/BlogAloldal.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 90%;
     object-fit: cover;
+    transform: scale(0.3);
 }
 
 .FoKepDiv{
@@ -278,7 +279,7 @@ span{
     display: none;
     position: fixed;
     z-index: 1;
-    padding-top: 100%;
+    padding-top: 15%;
     left: 0;
     top: 0;
     width: 100%;
@@ -292,16 +293,16 @@ span{
     width: 80%;
     max-width: 700px;
     animation-name: zoomAnim;
-    animation-duration: 0.5s;
+    animation-duration: 0.2s;
 }
 .BezaroGomb{
     position: absolute;
-    top: 15px;
-    right: 35px;
+    top: 10%;
+    right: 1.5%;
     color: white;
-    font-size: 40px;
+    font-size: 80px;
     font-weight: bold;
-    transform: 0.3s;
+    transform: 0.05s;
 }
 .BezaroGomb:hover,
 .BezaroGomb:focus {
@@ -317,3 +318,20 @@ span{
         transform: scale(1);
     }
 }
+
+@media  screen and (max-width: 1015px){
+    .kepModal{
+        margin-top: 8%;
+    }
+}
+@media  screen and (max-width: 770px){
+    .ModalKep{
+        margin-top: 25%;
+    }
+}
+@media  screen and (max-width: 650px){
+    .ModalKep{
+        margin-top: 30%;
+    }
+}
+
