--- a/main.css
+++ b/main.css
@@ -561,12 +561,14 @@ h2::after {
     position: relative;
     height: 260px;
     width: 50%;
+    border: 1px solid black;
+
 }
 .close {
     position: absolute;
     top: 10px;
     right: 15px;
-    font-size: 20px;
+    font-size: 30px;
     cursor: pointer;
     width: 25px;
     color: white;
@@ -592,6 +594,24 @@ h2::after {
 
 .modal-img{
   border-radius: 10px 0px 0px 10px;
+  border: 1px solid black;
+
+}
+
+@media only screen and (max-width: 600px) {
+
+  .modal-content{
+    display: block;
+    width: 260px;
+    height: fit-content;
+    border-radius: 0;
+  }
+  .modal-img{
+    border-radius: 0;
+  }
+  #popUpMain{
+    flex-direction: column;
+  }
 }
  
 /* asztal */
