--- a/CSS/Coupons.css
+++ b/CSS/Coupons.css
@@ -1,14 +1,16 @@
 .main{
     display: flex;
     flex-direction:column;
-    flex-wrap: wrap;
-
 }
 
 
-.couponPic{
-    width: 320px;
+.couponIMGDiv{
+    min-width: 320px;
+    height: 300px;
     box-shadow: 0px 0px 5px black;
+    overflow: hidden;
+    background-position: center;
+    background-size: contain;
 }
 
 .couponMain{
@@ -22,11 +24,15 @@
     box-shadow: 0px 0px 1em rgb(160, 160, 160);
     margin-top: 10px;
     margin-bottom: 10px;
+    height: fit-content;
+
 }
+
 
 .couponLeiras{
     margin-left: 2em;
-    width: 66%;
+    width: 50%;
+    margin-right: 5%;
     text-align: justify; 
 }
 
@@ -36,7 +42,7 @@ h1{
     letter-spacing: 2px;
 }
 
-.couponMain button{
+.couponBTN{
     font-size: 20px;
     font-weight: 500;
     letter-spacing: 2px;
@@ -50,22 +56,23 @@ h1{
     border-radius: 3px;
     transition: 0.3s ;
     text-align: center;
+
+    position: relative;
+    top: 61%;
+    bottom: -40px;
+    left: 20px;
 }
 
-.couponMain button:hover{
+.couponBTN:hover{
     background-color: rgb(235, 73, 73);
     color: white;
     font-size: 21px;
     border-color: rgb(192, 0, 0);
 }
 
-.kep{
+.couponLearazas{
     position: relative;
-}
-
-.kedvezmeny{
-    position: absolute;
-    top: 10%;
+    bottom: 40%;
     left: 3%;
     z-index: 999;
     font-size: 50px;
@@ -80,7 +87,7 @@ h1{
         
     }
 
-    .couponMain button{
+    .couponBTN{
         margin: 0 auto;
         margin-bottom: 50px;
     }
@@ -91,7 +98,7 @@ h1{
         margin-bottom: 50px;
     }
 
-    .couponPic{
+    .couponIMGDiv{
         margin-right: 1em;
     }
 
@@ -108,11 +115,11 @@ h1{
         flex-direction: column;
         align-items: center;
     }
-    .couponPic{
+    .couponIMGDiv{
         margin-right: 0;
         width: 100%;
     }
-    .couponMain button{
+    .couponBTN{
         width: 90%;
     }
 }
