--- a/CSS/Coupons.css
+++ b/CSS/Coupons.css
@@ -9,8 +9,12 @@
     height: 300px;
     box-shadow: 0px 0px 5px black;
     overflow: hidden;
-    background-position: center;
-    background-size: contain;
+    background-size: cover;
+}
+
+.couponIMGDiv::after{
+    background-color: black ;
+    opacity: 0.4;
 }
 
 .couponMain{
@@ -20,7 +24,7 @@
     align-items: center;
     width: 80%;
     margin: 0 auto;
-    background-color: rgb(236, 229, 229);
+    background-color: white;
     box-shadow: 0px 0px 1em rgb(160, 160, 160);
     margin-top: 10px;
     margin-bottom: 10px;
@@ -29,30 +33,52 @@
 }
 
 
+
 .couponLeiras{
     margin-left: 2em;
-    width: 50%;
+    width: 90%;
     margin-right: 5%;
     text-align: justify; 
 }
 
-h1{
-    font-weight: 500;
-    margin-left: 1em;
-    letter-spacing: 2px;
+h1 {
+    border-bottom: 1px solid gray;
+    font-size: 40px;
+    color: black;
+    display: block;
+  }
+  
+  h1::after {
+    content: '';
+    border-bottom: 3px solid orangered;
+    display: block;
+    margin-bottom: -1px;
+    max-width: 3vw;
+    padding-top: 0.5%;
+    margin-left: -10px;
+
+  }
+
+.couponCim{
+    margin-left: 10px;
 }
 
+.couponSzovegDiv{
+    display: flex;
+    flex-direction: column;
+    height: 300px;
+    width: 100%;
+}
 .couponBTN{
     font-size: 20px;
     font-weight: 500;
     letter-spacing: 2px;
     margin-right: 10%;
-    width: max-content;
+    width: 210px;
     height: 70px;
-    color: rgb(235, 73, 73);
-    border: navajowhite;
-    background-color: rgb(255, 255, 255);
-    border: rgb(235, 73, 73) 1px solid;
+    color: white;
+    background-color: rgb(235, 73, 73);
+    border: white 1px solid;
     border-radius: 3px;
     transition: 0.3s ;
     text-align: center;
@@ -64,10 +90,10 @@ h1{
 }
 
 .couponBTN:hover{
-    background-color: rgb(235, 73, 73);
-    color: white;
+    background-color: white ;
+    color: rgb(235, 73, 73);
     font-size: 21px;
-    border-color: rgb(192, 0, 0);
+    border-color: white;
 }
 
 .couponLearazas{
@@ -83,7 +109,10 @@ h1{
 
 @media only screen and (max-width: 1000px){
     .couponMain{
-        flex-wrap: wrap;     
+        flex-wrap: wrap; 
+        flex-direction: column;
+        align-items: center;
+        overflow: hidden;    
         
     }
 
@@ -96,6 +125,7 @@ h1{
         margin: 0 auto;
         text-align: center;
         margin-bottom: 50px;
+        width: 98.5%;
     }
 
     .couponIMGDiv{
@@ -105,6 +135,7 @@ h1{
     .couponLeiras{
         margin: 0 auto;
         margin-bottom: 1em;
+        text-align: justify;
         text-align-last: center;
     }
 }
@@ -113,7 +144,7 @@ h1{
 
     .couponMain{
         flex-direction: column;
-        align-items: center;
+        justify-content: center;
     }
     .couponIMGDiv{
         margin-right: 0;
@@ -121,5 +152,32 @@ h1{
     }
     .couponBTN{
         width: 90%;
+    }
+    .couponCim{
+        font-size: 35px;
+        margin: 0 auto;
+        width: 100%;
+    }
+
+    h1{
+        width: 95%;
+    }
+}
+
+@media only screen and (max-width: 400px){
+    .couponSzovegDiv{
+        display: block;
+        margin-left: -30px;
+    }
+
+    .couponBTN{
+        width: 70%;
+    }
+}
+
+@media only screen and (max-width: 374px){
+    .couponSzovegDiv{
+        display: block;
+        margin-left: -40px;
     }
 }
