--- a/CSS/Coupons.css
+++ b/CSS/Coupons.css
@@ -165,15 +165,15 @@ h1 {
 }
 
 @media only screen and (max-width: 400px){
-    .couponSzovegDiv{
-        display: block;
-        margin-left: -30px;
+    .couponCim{
+            width: 100%;
     }
 
     .couponBTN{
         width: 70%;
     }
 }
+
 
 @media only screen and (max-width: 374px){
     .couponSzovegDiv{
