--- a/main.css
+++ b/main.css
@@ -378,6 +378,51 @@ h2::after {
 .card-container:hover {
   background-color: rgb(238, 109, 109);
 } 
+.cart-icon-container {
+  position: relative;
+  margin-left: 20px;
+  cursor: pointer;
+}
+
+#cart-icon {
+  width: 35px;
+  height: 35px;
+}
+
+#cart-count {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  background: red;
+  color: white;
+  border-radius: 50%;
+  padding: 2px 6px;
+  font-size: 12px;
+  font-weight: bold;
+}
+
+#cart-preview {
+  position: absolute;
+  top: 45px;
+  right: 0;
+  background-color: white;
+  box-shadow: 0 0 5px gray;
+  width: 250px;
+  max-height: 300px;
+  overflow-y: auto;
+  padding: 10px;
+  z-index: 999;
+  display: none;
+}
+
+#cart-preview.visible {
+  display: block;
+}
+
+#cart-preview p {
+  margin: 5px 0;
+  font-size: 14px;
+}
 
 .add-to-cart {
   position: absolute;
@@ -387,7 +432,6 @@ h2::after {
   left: 50%;
   transform: translate(-50%, -50%);
   color: white !important;
-  font-variant: small-caps;
   font-weight: 600;
   border: solid;
   border-width: 1px;
