--- a/main.css
+++ b/main.css
@@ -338,31 +338,29 @@ h2::after {
   padding-top: 0.5%;
 }
 
-.kartyak {
-  width: 100%;
-  min-width: 280px;
-  max-width: 280px;
-  margin-top: 20px;
-}
 
 .row {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .card {
   background-color: rgb(248, 248, 248);
   display: flex;
-  width: 100%;
+  width: 200px;
   flex-direction: column; 
   overflow: hidden;
   position: relative;
   
 }
+.column{
+  width: 200px;
+}
 .card-container {
   position: relative;
   overflow: hidden;
-  height: 280px;
+  height: 140px;
 }
 .card-container img {
   width: 100%;
@@ -380,8 +378,11 @@ h2::after {
 } 
 .cart-icon-container {
   position: relative;
-  margin-left: 20px;
+  margin-right: 25%;
   cursor: pointer;
+  display: flex;
+  justify-content: flex-end ;
+  align-items: center;
 }
 
 #cart-icon {
@@ -390,14 +391,11 @@ h2::after {
 }
 
 #cart-count {
-  position: absolute;
-  top: -8px;
-  right: -8px;
+  position: relative;
   background: red;
   color: white;
   border-radius: 50%;
   padding: 2px 6px;
-  font-size: 12px;
   font-weight: bold;
 }
 
@@ -662,6 +660,7 @@ h2::after {
 @media only screen and (min-width: 1024px) {
   .row {
     gap: 1.1vw; 
+    justify-content: space-between;
   }
 
   .kartyak {
@@ -697,6 +696,7 @@ h2::after {
 
   .route{
     display: flex;
+    flex-wrap: wrap;
   }
 
   .hamburger span {
@@ -935,7 +935,9 @@ i{
     }
 
     .row{
-      justify-content: space-around;
+      justify-content: space-between;
+      gap: 1.1vw;
+      flex: 1 1 calc(50% - 20px);
     }
   }
 
@@ -947,6 +949,7 @@ i{
   @media only screen and (max-width: 600px) {
     .row {
       gap: 15px; 
+      justify-content: space-between;
     }
   
     .kartyak {
