--- a/main.css
+++ b/main.css
@@ -360,7 +360,6 @@ h2::after {
 .card-container {
   position: relative;
   overflow: hidden;
-  height: 140px;
 }
 .card-container img {
   width: 100%;
@@ -949,11 +948,11 @@ i{
   @media only screen and (max-width: 600px) {
     .row {
       gap: 15px; 
-      justify-content: space-between;
+      justify-content: space-around;
+      align-items: center;
     }
   
     .kartyak {
-      flex: 1 1 100%; 
     }
   }
   
