--- a/kosar.css
+++ b/kosar.css
@@ -6,21 +6,27 @@
     justify-content: flex-end;
     align-items: center;
 }
-
+#buttons-container.button-container{
+    display: none;
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+}
 .kosar-item {
     display: flex;
-    align-items: center;
-    margin-bottom: 15px;
-    gap: 10px;
+  align-items: center;
+  gap: 15px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 8px;
 }
 
 .kosar-item img {
-    width: 50px;
-    height: 50px;
+    width: 150px;
+    height: 150px;
     object-fit: cover;
     border-radius: 5px;
 }
-
 .checkout-gomb {
     padding: 10px 20px;
     font-weight: bold;
@@ -35,7 +41,11 @@
 .checkout-gomb:hover {
     background-color: rgb(200, 50, 50);
 }
-
+#checkout-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); 
+    gap: 20px;
+  }
 .cart-icon-container {
     position: absolute;
 }
